:white_check_mark: test: all requests and returns in swagger
